# rustyfin

./: .gitignore  Cargo.toml  LICENSE  README.md  cargos.sh  pyproject.toml
src/: lib.rs  optimization.rs  options.rs
src/optimization/: root_find.rs
src/options/: black_scholes.rs  volatility.rs  volatility_py.rs
